--- a/coming-soon.html
+++ b/coming-soon.html
@@ -3,12 +3,11 @@
  <html lang="en">
 
 
-<!-- Mirrored from expert-themes.com/html/eventrox/coming-soon.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 09 Feb 2021 17:35:42 GMT -->
 <head>
 
 <meta charset="utf-8">
 
-<title>Eventrox - Digital Events HTML Template | Coming Soon</title>
+<title>Scrum Day Bangalore 2021 - Hosted by Xebia</title>
 
 <!-- Stylesheets -->
 
@@ -94,7 +93,7 @@
 
                 <div class="timer">
 
-                    <div class="cs-countdown clearfix" data-countdown="12/11/2021 05:06:59"></div>            
+                    <div class="cs-countdown clearfix" data-countdown="03/02/2021 05:06:59"></div>            
 
                 </div>
 
