--- a/index.html
+++ b/index.html
@@ -189,12 +189,13 @@
 
         <div class="auto-container">
             <div class="content-box">
-                <div class="address"><span class="icon fa fa-map-marker-alt"></span>Pearl Hotel, New York, USA</div>
-                <h2> Digital Agency <br>Thinkers Meet Up</h2>
+                <div class="address"><span class="icon fa fa-map-marker-alt"></span>June 19, 2021 | LIVE VIRTUAL</div>
+                <h2> Scrum Day<br>Bangalore 2021</h2>
+				<h5><strong><Mark>Metrics and Measurements – Mirrors of Enterprise Mental Models</Mark></strong></h5><Br><Br><Br>
             </div>
             <!-- Countdown -->
             <div class="countdown clearfix">
-                <div class="time-counter"><div class="time-countdown clearfix" data-countdown="2021/12/10"></div></div>
+                <div class="time-counter"><div class="time-countdown clearfix" data-countdown="2021/06/19"></div></div>
             </div>
             <div class="btn-box">
                 <a href="buy-ticket.html" class="theme-btn btn-style-one"><span class="btn-title">Get Tickets</span></a>
@@ -319,7 +320,7 @@
 
                         <h4><a href="about.html">Experience</a></h4>
 
-                        <div class="text">Dolor sit amet consectetur elit sed do eiusmod tempor incd idunt labore et dolore magna aliqua.</div>
+                        <div class="text">Wide spectrum of learning techniques, including lectures, workshops, open spaces, lightening talks, coach clinic and many more.</div>
 
                         <div class="link-box"><a href="about.html" class="theme-btn">Read More</a></div>
 
@@ -339,7 +340,7 @@
 
                         <h4><a href="about.html">Networking</a></h4>
 
-                        <div class="text">Dolor sit amet consectetur elit sed do eiusmod tempor incd idunt labore et dolore magna aliqua.</div>
+                        <div class="text">A Premium, exclusive networking opportunity enabled via an Agile CXOs conclave, focusing on the concerns of Leadership in Agile organizations.</div>
 
                         <div class="link-box"><a href="about.html" class="theme-btn">Read More</a></div>
 
@@ -1442,7 +1443,7 @@
 
                                 <li class="true">Inclusive All Taxes</li>
 
-                                <li class="true">For Indian Participants</li>
+                                <li class="true">For International Participants</li>
 
                                 <li class="true">Recorded Sessions</li>
 
@@ -1521,11 +1522,11 @@
 
             <div class="content-box">
 
-                <div class="text">WE’RE A LEADING INDUSTRY COMPANY</div>
+                <div class="text">CREATING DIGITAL LEADERS</div>
 
-                <h2>We Are Always at The <br>Forefront of The Business Conference !</h2>
+                <h2>Xebia delivers high-quality services<br> to cover all aspects of digital transformation.</h2>
 
-                <a href="https://www.youtube.com/watch?v=Fvae8nxzVz4" class="play-now" data-fancybox="gallery" data-caption=""><i class="icon flaticon-play-button-3" aria-hidden="true"></i><span class="ripple"></span></a>
+                <a href="https://youtu.be/5TVVIEwKn5c" class="play-now" data-fancybox="gallery" data-caption=""><i class="icon flaticon-play-button-3" aria-hidden="true"></i><span class="ripple"></span></a>
 
             </div>
 
@@ -1553,7 +1554,7 @@
 
                             <span class="title">JOIN THE EVENT</span>
 
-                            <h2>Why Choose Eventrox?</h2>
+                            <h2>Why Choose Scrum Day?</h2>
 
                             <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmtempor incididunt labore et dolore magna aliqu enim ad minim veniam quis nostrud exercitation ullamco laboris nisi ut aliquip</div>
 
@@ -1617,7 +1618,7 @@
 
             <div class="sec-title">
 
-                <span class="title">Clients</span>
+                <span class="title">Our</span>
 
                 <h2>Offcial Sponsors</h2>
 
@@ -1874,7 +1875,7 @@
 
                                     <div class="text">
 
-                                        <p>Xebia proudly presents Scrum Day Bangalore 2021 – the festival of knowledge and networking. Its time for Agile Enthusiasts, Agile Practitioners all over the world to visit namma Bengaluru virtually to come together, share the knowledge and network. With an awesome, most pressing need of the hour theme “Metrics and Measurements – Mirrors of Enterprise Mental Models” discover, explore, deep dive into the madness behind metrics – the good, bad and ugly of number crunching.</p>           
+                                        <p>Xebia proudly presents Scrum Day Bangalore 2021 – the festival of knowledge and networking. Its time for Agile Enthusiasts, Agile Practitioners all over the world to visit namma Bengaluru virtually to come together, share the knowledge and network. </p>           
 
                                     </div>
 
@@ -1913,8 +1914,6 @@
                                         <li><a href="#">Terms & Conditions</a></li>
 
                                         <li><a href="#">Privacy Policy</a></li>
-
-                                        <li><a href="blog.html">Blogs</a></li>
 
                                         <li><a href="contact.html">Contact Us</a></li>
 
@@ -1956,7 +1955,7 @@
 
                                                 <span class="icon flaticon-clock"></span>
 
-                                                <div class="text">Mon - Fri: 09:00 - 18:00</div>
+                                                <div class="text">09:00 AM - 06:00 PM</div>
 
                                             </li>
 
@@ -2008,7 +2007,7 @@
 
                                 <div class="footer-widget instagram-widget">
 
-                                    <h2 class="widget-title">Instagram Gallery</h2>
+                                    <h2 class="widget-title">Gallery</h2>
 
                                     <div class="widget-content">
 
@@ -2090,7 +2089,7 @@
 
                     <div class="copyright-text">
 
-                        <p>© Copyright 2021 All Rights Reserved by <a href="index.html">Xebia</a></p>
+                        <p>XEBIA GROUP © 2021  I  ALL RIGHTS RESERVED  I  XEBIA.COM </p>
 
                     </div>
 
