--- a/coming-soon.html
+++ b/coming-soon.html
@@ -96,7 +96,7 @@
 
                 <div class="emailed-form">
 
-                    <form method="post" action="https://expert-themes.com/html/eventrox/contact.html">
+                    <form method="post" action="contact.html">
 
                         <div class="form-group">
 
