--- a/coming-soon.html
+++ b/coming-soon.html
@@ -120,11 +120,9 @@
 
                         <li><a href="#"><span class="fab fa-linkedin-in"></span></a></li>
 
-                        <li><a href="#"><span class="fab fa-behance"></span></a></li>
+                        <li><a href="#"><span class="fab fa-youtube"></span></a></li>
 
-                        <li><a href="#"><span class="fab fa-dribbble"></span></a></li>
-
-                    </ul>
+                                        </ul>
 
                 </div>
 
