--- a/about-us.html
+++ b/about-us.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 
  <html lang="en">
-
-
-<!-- Mirrored from expert-themes.com/html/eventrox/about-us.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 09 Feb 2021 17:35:40 GMT -->
 <head>
 
 <meta charset="utf-8">
 
-<title>Eventrox - Digital Events HTML Template | About Us</title>
+<title>Scrum Day Bangalore 2021 - Hosted by Xebia</title>
 
 <!-- Stylesheets -->
 
@@ -54,11 +51,7 @@
 
 <div class="page-wrapper">
 
- 	
-
-    <!-- Preloader -->
-
-    <div class="preloader"></div>
+ 
 
  	<!-- Header span -->
 
@@ -94,7 +87,7 @@
 
                     <div class="mobile-nav-toggler"><span class="icon flaticon-menu"></span></div>
 
-                    <!-- Main Menu -->
+ <!-- Main Menu -->
 
                     <nav class="main-menu navbar-expand-md navbar-light">
 
@@ -115,99 +108,23 @@
                         <div class="collapse navbar-collapse clearfix" id="navbarSupportedContent">
 
                             <ul class="navigation clearfix">
+							
+							    <li class="current dropdown"><a href="index.html">Home</a></li>
 
-                                <li class="dropdown"><a href="index.html">Home</a>
+                                <li class="dropdown"><a href="about-us.html">About</a></li>
 
-                                    <ul>
+                                <li class="dropdown"><a href="speakers.html">Speakers</a></li>
 
-                                        <li><a href="index.html">Home Classic</a></li>
+                                <li class="dropdown"><a href="schedule.html">Schedule</a></li>
 
-                                        <li><a href="index-2.html">Home Conference</a></li>
-
-                                        <li><a href="index-3.html">Home Meetup</a></li>
-
-										<li><a href="index-4.html">Home Page Four</a></li>
-
-                                        <li><a href="index-5.html">Home Page Five</a></li>
-
-                                        <li class="dropdown"><a href="#">Header Styles</a>
-
-                                            <ul>
-
-                                                <li><a href="index.html">Header Style One</a></li>
-
-                                                <li><a href="index-2.html">Header Style Two</a></li>
-
-                                                <li><a href="index-3.html">Header Style Three</a></li>
-
-												<li><a href="index-4.html">Home Page Four</a></li>
-
-												<li><a href="index-5.html">Home Page Five</a></li>
-
-                                            </ul>
-
-                                        </li>
-
-                                    </ul>
-
-                                </li>
-
-                                <li class="current dropdown"><a href="about-us.html">About</a>
+                                <li class="dropdown"><a href="#">Other Events</a>
 
                                     <ul>
 
-                                        <li><a href="about-us.html">About Us</a></li>
+                                        <li><a href="https://agilencr.org/">Agile NCR 2021</a></li>
 
-                                        <li><a href="pricing.html">Pricing</a></li>
-
-                                        <li><a href="faqs.html">FAQ's</a></li>
-
-										<li><a href="gallery.html">Gallery</a></li>
-
-                                        <li><a href="coming-soon.html">Coming Soon</a></li>
-
-                                    </ul>
-
-                                </li>
-
-                                <li class="dropdown"><a href="speakers.html">Speakers</a>
-
-                                    <ul>
-
-                                        <li><a href="speakers.html">Speakers</a></li>
-
-                                        <li><a href="speakers-detail.html">Speakers Detail</a></li>
-
-                                    </ul>
-
-                                </li>
-
-                                <li class="dropdown"><a href="schedule.html">Schedule</a>
-
-                                    <ul>
-
-                                        <li><a href="schedule.html">Schedule</a></li>
-
-                                        <li><a href="event-detail.html">Event Detail</a></li>
-
-                                        <li><a href="buy-ticket.html">Buy Ticket</a></li>
-
-                                    </ul>
-
-                                </li>
-
-                                <li class="dropdown"><a href="blog-sidebar.html">Blog</a>
-
-                                    <ul>
-
-                                        <li><a href="blog-sidebar.html">Blog With Sidebar</a></li>
-
-                                        <li><a href="blog-grid.html">Blog Grid</a></li>
-
-                                        <li><a href="blog-single.html">Blog Single</a></li>
-
-                                        <li><a href="error-page.html">404 Error</a></li>
-
+                                        <li><a href="https://www.rsgpune.org/">Regional Scrum Gathering Pune</a></li>
+                                      
                                     </ul>
 
                                 </li>
@@ -1160,40 +1077,6 @@
 
 <!--End pagewrapper-->
 
-
-
-<!-- Color Palate / Color Switcher -->
-
-<div class="color-palate">
-
-    <div class="color-trigger">
-
-        <i class="fa fa-cog"></i>
-
-    </div>
-
-    <div class="color-palate-head">
-
-        <h6>Choose Your Demo</h6>
-
-    </div>
-
-    <ul class="box-version option-box"> <li>Full width</li> <li class="box">Boxed</li> </ul>
-
-    <ul class="rtl-version option-box"> <li>LTR Version</li> <li class="rtl">RTL Version</li> </ul>
-
-    <div class="palate-foo">
-
-        <span>You will find much more options for colors and styling in admin panel. This color picker is used only for demonstation purposes.</span>
-
-    </div>
-
-    <a href="#" class="purchase-btn">Purchase now</a>
-
-</div><!-- End Color Switcher -->
-
-
-
 <!--Search Popup-->
 
 <div id="search-popup" class="search-popup">
@@ -1230,15 +1113,15 @@
 
             <ul class="recent-searches">
 
-                <li><a href="#">Seo</a></li>
+                <li><a href="https://agilencr.org/">AgileNCR</a></li>
 
-                <li><a href="#">Bussiness</a></li>
+                <li><a href="https://rsgpune.org">Regional Scrum Gathering</a></li>
 
-                <li><a href="#">Events</a></li>
+                <li><a href="https://xebia.com/">Xebia</a></li>
 
                 <li><a href="#">Digital</a></li>
 
-                <li><a href="#">Conferance</a></li>
+                <li><a href="https://www.scrumdaybangalore.org/">Conference</a></li>
 
             </ul>
 
@@ -1251,9 +1134,6 @@
     </div>
 
 </div>
-
-
-
 <!--Scroll to top-->
 
 <div class="scroll-to-top scroll-to-target" data-target="html"><span class="fa fa-angle-double-up"></span></div>
