--- a/about-us.html
+++ b/about-us.html
@@ -201,7 +201,7 @@
 
     <!--Page Title-->
 
-    <section class="page-title" style="background-image:url(images/background/5.jpg);">
+    <section class="page-title" style="background-image:url(images/main-slider/scrum-pages-2.png);">
 
         <div class="auto-container">
 
@@ -251,23 +251,13 @@
 
                             <span class="title">ABOUT EVENT</span>
 
-                            <h2>Welcome to the World Digital Conference 2020</h2>
+                            <h2>Welcome to Scrum Day Bangalore Conference</h2>
 
-                            <div class="text">Dolor sit amet consectetur elit sed do eiusmod tempor incd idunt labore et dolore magna aliqua enim ad minim veniam quis nostrud exercitation ullamco laboris nisi ut aliquip exea commodo consequat.</div>
+                            <div class="text">Bengaluru or Bangalore is the IT Capital and Silicon Valley of India. Scrum is the most popular Agile Framework. Xebia is the leading Agile Consulting and Training firm. When these three come together – Its festival of knowledge and networking. Xebia proudly presents Scrum Day Bangalore 2021 – the festival of knowledge and networking. Its time for Agile Enthusiasts, Agile Practitioners all over the world to visit namma Bengaluru virtually to come together, share the knowledge and network. With an awesome, most pressing need of the hour theme “Metrics and Measurements – Mirrors of Enterprise Mental Models” discover, explore, deep dive into the madness behind metrics – the good, bad and ugly of number crunching.</div>
 
                         </div>
 
-                        <ul class="list-style-one">
-
-                            <li>Multiple Announcements during the event.</li>
-
-                            <li>Logo & company details on the WordCamp.</li>
-
-                            <li>Dedicated blog post thanking each Gold.</li>
-
-                            <li>Acknowledgment and opening and closing.</li>
-
-                        </ul>
+                        
 
                         <div class="btn-box"><a href="contact.html" class="theme-btn btn-style-three"><span class="btn-title">Register Now</span></a></div>
 
@@ -533,7 +523,7 @@
 
     <!-- Call to action -->
 
-    <section class="call-to-action" style="background-image: url(images/background/11.jpg);">
+    <section class="call-to-action" style="background-image: url(images/main-slider/scrum-pages-2.png);">
 
         <div class="auto-container">
 
@@ -558,180 +548,53 @@
     <!--End Call to action -->
 
 
+    <!-- Subscribe Section -->
 
-     <!-- Event Info Section -->
-
-    <section class="event-info-section">
+    <section class="subscribe-section">
 
         <div class="auto-container">
 
-            <div class="row">
+            <div class="content-box">
 
-                <!-- Info Column -->
+                <div class="row">
 
-                <div class="info-column col-lg-6 col-md-12 col-sm-12 order-2">
-
-                    <div class="inner-column">
-
-                        <div class="sec-title style-two">
-
-                            <span class="title">Reach us</span>
-
-                            <h2>Direction for the <br>Event hall</h2>
-
-                        </div>
-
-
-
-                        <div class="event-info-tabs tabs-box">
-
-                            <!--Tabs Box-->
-
-                            <ul class="tab-buttons clearfix">
-
-                                <li class="tab-btn active-btn" data-tab="#tab1">Time</li>
-
-                                <li class="tab-btn" data-tab="#tab2">Venue</li>
-
-                                <li class="tab-btn" data-tab="#tab3">How to</li>
-
-                            </ul>
-
-
-
-                            <div class="tabs-content">
-
-                                <!--Tab-->
-
-                                <div class="tab active-tab" id="tab1">
-
-                                    <h4><span class="icon far fa-calendar"></span> January 20, 2020</h4>
-
-                                    <div class="text">9.00 AM - 04.00 PM</div>
-
-                                    <ul class="info-list">
-
-                                        <li><span class="icon icon_profile"></span> Dianne Ameter</li>
-
-                                        <li><span class="icon icon_phone"></span> <a href="tel:+690-147-265-345">+123 456 7890</a></li>
-
-                                        <li><span class="icon icon_mail"></span> <a href="mailto:sopport@Eventrox.com">sopport@Eventrox.com</a></li>
-
-                                    </ul>
-
-                                </div>
-
-
-
-                                <!--Tab-->
-
-                                <div class="tab" id="tab2">
-
-                                    <h4><span class="icon fa fa-map-marker-alt"></span>Pearl hotel, New york, USA</h4>
-
-                                    <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt labore et dolore magna aliqua. Aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore.</div>
-
-                                </div>
-
-
-
-                                <!--Tab-->
-
-                                <div class="tab" id="tab3">
-
-                                    <h4><span class="icon fa fa-directions"></span> How to get there</h4>
-
-                                    <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt labore et dolore magna aliqua. Aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore.</div>
-
-                                </div>
-
-                            </div>
-
-                        </div>
-
-                    </div>
-
-                </div>
-
-
-
-                <!-- Image Column -->
-
-                <div class="map-column col-lg-6 col-md-12 col-sm-12">
-
-                    <!--Map Outer-->
-
-                    <div class="map-outer">
-
-                        <!--Map Canvas-->
-
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25216.765666144616!2d144.9456413371385!3d-37.8112271492458!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642b8c21cb29b%3A0x1c045678462e3510!2sMelbourne%20VIC%203000%2C%20Australia!5e0!3m2!1sen!2s!4v1599237324751!5m2!1sen!2s" height="435"></iframe>
-
-                    </div>
-
-                </div>
-
-            </div>
-
-        </div>
-
-    </section>
-
-    <!--End Event Info Section -->
-
-
-
-    <!-- App Section -->
-
-    <section class="app-section">
-
-        <div class="auto-container">
-
-            <div class="row">
-
-                <!-- Content Box -->
-
-                <div class="content-column col-lg-5 col-md-12 col-sm-12">
-
-                    <div class="inner-column">
+                    <div class="title-column col-lg-6 col-md-12">
 
                         <div class="sec-title">
 
-                            <span class="title">App Download</span>
+                            <span class="icon fa fa-envelope"></span>
 
-                            <h2>Eventrox App</h2>
-
-                        </div>
-
-                        <div class="text-box">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt labore et dolore magna aliqua. Aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</div>
-
-                        <div class="link-box">
-
-                            <a href="#"><img src="images/icons/app-store.png" alt=""></a>
-
-                            <a href="#"><img src="images/icons/google-play.png" alt=""></a>
+                            <h2>Subscribe our <br>newslatter</h2>
 
                         </div>
 
                     </div>
 
-                </div>
 
 
+                    <div class="form-column col-lg-6 col-md-12">
 
-                <!-- Image Box -->
+                        <!--Newsletter Form-->
 
-                <div class="image-column col-lg-7 col-md-12 col-sm-12">
+                        <div class="newsletter-form">
 
-                    <div class="inner-column">
+                            <form method="post" action="https://expert-themes.com/html/eventrox/blog.html">
 
-                        <div class="image-box">
+                                <div class="form-group">
 
-                            <figure class="image wow fadeInRight"><img src="images/resource/app-mockup.png" alt=""></figure>
+                                    <input type="email" name="field-name" value="" placeholder="Enter Your Email" required>
+
+                                    <button type="submit" class="theme-btn btn-style-three"><span class="btn-title">Subscribe</span></button>
+
+                                </div>
+
+                            </form>
 
                         </div>
 
                     </div>
+
+                    
 
                 </div>
 
@@ -741,73 +604,11 @@
 
     </section>
 
-    <!--End App Section -->
+    <!--End Subscribe Section -->
 
 
 
-    <!-- Newsletter Section -->
-
-    <section class="newsletter-section">
-
-        <div class="anim-icons full-width">
-
-            <span class="icon icon-shape-3 wow fadeIn"></span>
-
-            <span class="icon icon-line-1 wow fadeIn"></span>
-
-        </div>
-
-
-
-        <div class="auto-container">
-
-            <!--Subscribe Form-->
-
-            <div class="subscribe-form wow fadeInUp" data-wow-delay="500ms">
-
-                <div class="envelope-image"></div>
-
-                <div class="form-inner">
-
-                    <div class="upper-box">
-
-                        <div class="sec-title text-center">
-
-                            <div class="icon-box"><span class="fa fa-envelope"></span></div>
-
-                            <h2>Subscribe our newslatter</h2>
-
-                            <div class="text">Lorem ipsum dolor amet consectetur adipisicing elit sed eiusm <br>tempor incididunt ut labore dolore magna.</div>
-
-                        </div>
-
-                    </div>
-
-                    <form method="post" action="https://expert-themes.com/html/eventrox/contact.html">
-
-                        <div class="form-group">
-
-                            <input type="email" name="email" value="" placeholder="Your email" required>
-
-                            <button type="submit" class="theme-btn"><span class="fa fa-paper-plane"></span></button>
-
-                        </div>
-
-                    </form>
-
-                </div>
-
-            </div> 
-
-        </div>
-
-    </section>
-
-    <!--End Newsletter Section -->
-
-
-
-    <!-- Main Footer -->
+<!-- Main Footer -->
 
     <footer class="main-footer">
 
@@ -839,7 +640,7 @@
 
                                     <div class="text">
 
-                                        <p>We have very good strength in innovative technology and tools with over 35 years of experience. We makes long-term investments goal in global companies in different sectors, mainly in Europe and other countries.</p>           
+                                        <p>Xebia proudly presents Scrum Day Bangalore 2021 – the festival of knowledge and networking. Its time for Agile Enthusiasts, Agile Practitioners all over the world to visit namma Bengaluru virtually to come together, share the knowledge and network. </p>           
 
                                     </div>
 
@@ -849,11 +650,9 @@
 
                                         <li><a href="#"><i class="fab fa-twitter"></i></a></li>
 
-                                        <li><a href="#"><i class="fab fa-pinterest"></i></a></li>
+                                        <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
 
                                         <li><a href="#"><i class="fab fa-youtube"></i></a></li>
-
-                                        <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
 
                                     </ul>
 
@@ -869,19 +668,17 @@
 
                                 <div class="footer-widget useful-links">
 
-                                    <h2 class="widget-title">Useful Links</h2>
+                                    <h2 class="widget-title">Quick Links</h2>
 
                                     <ul class="user-links">
 
-                                        <li><a href="index-2.html">Home</a></li>
+                                        <li><a href="https://agilencr.org/">AgileNCR 2021</a></li>
 
-                                        <li><a href="about-us.html">About Us</a></li>
+                                        <li><a href="https://rsgpune.org/">Regional Scrum Gathering Pune</a></li>
 
-                                        <li><a href="services.html">Services</a></li>
+                                        <li><a href="#">Terms & Conditions</a></li>
 
-                                        <li><a href="projects.html">Projects</a></li>
-
-                                        <li><a href="blog.html">Blogs</a></li>
+                                        <li><a href="#">Privacy Policy</a></li>
 
                                         <li><a href="contact.html">Contact Us</a></li>
 
@@ -923,7 +720,7 @@
 
                                                 <span class="icon flaticon-clock"></span>
 
-                                                <div class="text">Mon - Fri: 09:00 - 18:00</div>
+                                                <div class="text">09:00 AM - 06:00 PM</div>
 
                                             </li>
 
@@ -933,7 +730,7 @@
 
                                                 <span class="icon flaticon-phone"></span>
 
-                                                <div class="text"><a href="tel:+1-345-5678-77">+1-345-5678-77</a></div>
+                                                <div class="text"><a href="tel:+1-345-5678-77">+91 9873608216</a></div>
 
                                             </li>
 
@@ -943,7 +740,7 @@
 
                                                 <span class="icon flaticon-paper-plane"></span>
 
-                                                <div class="text"><a href="mailto:support@example.com">support@example.com</a></div>
+                                                <div class="text"><a href="mailto:conferences@xebia.com">conferences@xebia.com</a></div>
 
                                             </li>
 
@@ -953,7 +750,7 @@
 
                                                 <span class="icon flaticon-worldwide"></span>
 
-                                                <div class="text">13005 Greenville Avenue<br> California, TX 70240</div>
+                                                <div class="text">6th Floor, The HIVE Workspaces<br>Bengaluru, Karnataka 560048</div>
 
                                             </li>
 
@@ -975,7 +772,7 @@
 
                                 <div class="footer-widget instagram-widget">
 
-                                    <h2 class="widget-title">Instagram Gallery</h2>
+                                    <h2 class="widget-title">Gallery</h2>
 
                                     <div class="widget-content">
 
@@ -1057,7 +854,7 @@
 
                     <div class="copyright-text">
 
-                        <p>© Copyright 2020 All Rights Reserved by <a href="index.html">Expert-Themes</a></p>
+                        <p>XEBIA GROUP © 2021  I  ALL RIGHTS RESERVED  I  XEBIA.COM </p>
 
                     </div>
 
