--- a/about-us.html
+++ b/about-us.html
@@ -529,9 +529,9 @@
 
             <div class="content-box">
 
-                <div class="text">WE’RE A LEADING MEETUP COMPANY</div>
+                <div class="text">CREATING DIGITAL LEADERS</div>
 
-                <h2>We Are Always at The Forefront <br> of The Business Conference !</h2>
+                <h2>Xebia delivers high-quality services <br> to cover all aspects of digital transformation.</h2>
 
                 <div class="btn-box">
 
