--- a/about-us.html
+++ b/about-us.html
@@ -772,7 +772,7 @@
 
                                 <div class="footer-widget instagram-widget">
 
-                                    <h2 class="widget-title">Gallery</h2>
+                                     <h2 class="widget-title">Gallery</h2>
 
                                     <div class="widget-content">
 
@@ -780,7 +780,7 @@
 
                                             <figure class="image">
 
-                                                <a href="images/gallery/1.jpg" class="lightbox-image" title="Image Title Here"><img src="images/resource/gw-1.jpg" alt=""></a>
+                                                <a href="images/gallery/1.jpg" class="lightbox-image" title="Image Title Here"><img src="images/gallery/1.jpg" alt=""></a>
 
                                             </figure>
 
@@ -788,7 +788,7 @@
 
                                             <figure class="image">
 
-                                                <a href="images/gallery/2.jpg" class="lightbox-image" title="Image Title Here"><img src="images/resource/gw-2.jpg" alt=""></a>
+                                                <a href="images/gallery/2.jpg" class="lightbox-image" title="Image Title Here"><img src="images/gallery/2.jpg" alt=""></a>
 
                                             </figure>
 
@@ -796,7 +796,7 @@
 
                                             <figure class="image">
 
-                                                <a href="images/gallery/3.jpg" class="lightbox-image" title="Image Title Here"><img src="images/resource/gw-3.jpg" alt=""></a>
+                                                <a href="images/gallery/3.jpg" class="lightbox-image" title="Image Title Here"><img src="images/gallery/3.jpg" alt=""></a>
 
                                             </figure>
 
@@ -804,7 +804,7 @@
 
                                             <figure class="image">
 
-                                                <a href="images/gallery/4.jpg" class="lightbox-image" title="Image Title Here"><img src="images/resource/gw-4.jpg" alt=""></a>
+                                                <a href="images/gallery/4.jpg" class="lightbox-image" title="Image Title Here"><img src="images/gallery/4.jpg" alt=""></a>
 
                                             </figure>
 
@@ -812,15 +812,13 @@
 
                                             <figure class="image">
 
-                                                <a href="images/gallery/5.jpg" class="lightbox-image" title="Image Title Here"><img src="images/resource/gw-5.jpg" alt=""></a>
+                                                <a href="images/gallery/5.jpg" class="lightbox-image" title="Image Title Here"><img src="images/gallery/5.jpg" alt=""></a>
 
                                             </figure>
 
-
-
                                             <figure class="image">
 
-                                                <a href="images/gallery/1.jpg" class="lightbox-image" title="Image Title Here"><img src="images/resource/gw-6.jpg" alt=""></a>
+                                                <a href="images/gallery/6.jpg" class="lightbox-image" title="Image Title Here"><img src="images/gallery/6.jpg" alt=""></a>
 
                                             </figure>
 
