--- a/index.html
+++ b/index.html
@@ -2015,7 +2015,7 @@
 
                                             <figure class="image">
 
-                                                <a href="images/gallery/1.jpg" class="lightbox-image" title="Image Title Here"><img src="images/resource/gw-1.jpg" alt=""></a>
+                                                <a href="images/gallery/1.jpg" class="lightbox-image" title="Image Title Here"><img src="images/gallery/1.jpg" alt=""></a>
 
                                             </figure>
 
@@ -2023,7 +2023,7 @@
 
                                             <figure class="image">
 
-                                                <a href="images/gallery/2.jpg" class="lightbox-image" title="Image Title Here"><img src="images/resource/gw-2.jpg" alt=""></a>
+                                                <a href="images/gallery/2.jpg" class="lightbox-image" title="Image Title Here"><img src="images/gallery/2.jpg" alt=""></a>
 
                                             </figure>
 
@@ -2031,7 +2031,7 @@
 
                                             <figure class="image">
 
-                                                <a href="images/gallery/3.jpg" class="lightbox-image" title="Image Title Here"><img src="images/resource/gw-3.jpg" alt=""></a>
+                                                <a href="images/gallery/3.jpg" class="lightbox-image" title="Image Title Here"><img src="images/gallery/3.jpg" alt=""></a>
 
                                             </figure>
 
@@ -2039,7 +2039,7 @@
 
                                             <figure class="image">
 
-                                                <a href="images/gallery/4.jpg" class="lightbox-image" title="Image Title Here"><img src="images/resource/gw-4.jpg" alt=""></a>
+                                                <a href="images/gallery/4.jpg" class="lightbox-image" title="Image Title Here"><img src="images/gallery/4.jpg" alt=""></a>
 
                                             </figure>
 
@@ -2047,17 +2047,16 @@
 
                                             <figure class="image">
 
-                                                <a href="images/gallery/5.jpg" class="lightbox-image" title="Image Title Here"><img src="images/resource/gw-5.jpg" alt=""></a>
+                                                <a href="images/gallery/5.jpg" class="lightbox-image" title="Image Title Here"><img src="images/gallery/5.jpg" alt=""></a>
 
                                             </figure>
-
-
 
                                             <figure class="image">
 
-                                                <a href="images/gallery/1.jpg" class="lightbox-image" title="Image Title Here"><img src="images/resource/gw-6.jpg" alt=""></a>
+                                                <a href="images/gallery/6.jpg" class="lightbox-image" title="Image Title Here"><img src="images/gallery/6.jpg" alt=""></a>
 
                                             </figure>
+
 
                                         </div>
 
