--- a/index.html
+++ b/index.html
@@ -1415,7 +1415,7 @@
 
                             <div class="btn-box">
 
-                                <a href="buy-ticket.html" class="theme-btn btn-style-one"><span class="btn-title">BUY Ticket</span></a>
+                                <a href="http://bit.ly/sdbindiaeb" class="theme-btn btn-style-one"><span class="btn-title">BUY TICKET</span></a>
 
                             </div>
 
@@ -1455,7 +1455,7 @@
 
                             <div class="btn-box">
 
-                                <a href="buy-ticket.html" class="theme-btn btn-style-one"><span class="btn-title">BUY Ticket</span></a>
+                                <a href="http://bit.ly/sdbin" class="theme-btn btn-style-one"><span class="btn-title">BUY TICKET</span></a>
 
                             </div>
 
@@ -1495,7 +1495,7 @@
 
                             <div class="btn-box">
 
-                                <a href="buy-ticket.html" class="theme-btn btn-style-one"><span class="btn-title">BUY Ticket</span></a>
+                                <a href="buy-ticket.html" class="theme-btn btn-style-one"><span class="btn-title">COMING SOON</span></a>
 
                             </div>
 
@@ -2101,8 +2101,6 @@
     </footer>
 
     <!-- End Footer -->
-
-
 
 
 </div>
