--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
 
                 <div class="text">We are currently working on an awesome new site. Stay tuned for more information.<br> Subscribe to our newsletter to stay updated on our progress</div>
 
+<div class="text">Write us to<b> conferences@xebia.com</b><br> Call us @ <b>+91 9820628506</b></div>
                 <div class="timer">
 
                     <div class="cs-countdown clearfix" data-countdown="03/02/2021 05:06:59"></div>            
@@ -139,39 +140,6 @@
 <!--End pagewrapper-->
 
 
-
-<!-- Color Palate / Color Switcher -->
-
-<div class="color-palate">
-
-    <div class="color-trigger">
-
-        <i class="fa fa-cog"></i>
-
-    </div>
-
-    <div class="color-palate-head">
-
-        <h6>Choose Your Demo</h6>
-
-    </div>
-
-    <ul class="box-version option-box"> <li>Full width</li> <li class="box">Boxed</li> </ul>
-
-    <ul class="rtl-version option-box"> <li>LTR Version</li> <li class="rtl">RTL Version</li> </ul>
-
-    <div class="palate-foo">
-
-        <span>You will find much more options for colors and styling in admin panel. This color picker is used only for demonstation purposes.</span>
-
-    </div>
-
-    <a href="#" class="purchase-btn">Purchase now</a>
-
-</div><!-- End Color Switcher -->
-
-
-
 <!--Search Popup-->
 
 <div id="search-popup" class="search-popup">
@@ -208,15 +176,15 @@
 
             <ul class="recent-searches">
 
-                <li><a href="#">Seo</a></li>
+                <li><a href="https://agilencr.org/">AgileNCR</a></li>
 
-                <li><a href="#">Bussiness</a></li>
+                <li><a href="https://rsgpune.org">Regional Scrum Gathering</a></li>
 
-                <li><a href="#">Events</a></li>
+                <li><a href="https://xebia.com/">Xebia</a></li>
 
                 <li><a href="#">Digital</a></li>
 
-                <li><a href="#">Conferance</a></li>
+                <li><a href="https://www.scrumdaybangalore.org/">Conference</a></li>
 
             </ul>
 
@@ -259,7 +227,4 @@
 <script src="js/color-settings.js"></script>
 
 </body>
-
-
-<!-- Mirrored from expert-themes.com/html/eventrox/coming-soon.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 09 Feb 2021 17:35:42 GMT -->
 </html>
