--- a/index.html
+++ b/index.html
@@ -122,13 +122,13 @@
 
                             <div class="icon-box"><span class="fa fa-envelope"></span></div>
 
-                            <h2>Subscribe our newslatter</h2>
+                            <h2>Subscribe our newsletter</h2>
 
                         </div>
 
                     </div>
 
-                    <form method="post" action="https://expert-themes.com/html/eventrox/contact.html">
+                    <form method="post" action="#">
 
                         <div class="form-group">
 
