--- a/testing.html
+++ b/testing.html
@@ -101,7 +101,7 @@
 
                             <ul class="navigation clearfix">
 							
-							    <li class="current dropdown"><a href="index.html">Home</a></li>
+							    <li class="dropdown"><a href="index.html">Home</a></li>
 
                                 <li class="dropdown"><a href="about-us.html">About</a></li>
 
