--- a/testing.html
+++ b/testing.html
@@ -1815,7 +1815,7 @@
 
                         <div class="newsletter-form">
 
-                            <form method="post" action="https://expert-themes.com/html/eventrox/blog.html">
+                            <form method="post" action="https://scrumdaybangalore.org/">
 
                                 <div class="form-group">
 
@@ -2119,7 +2119,7 @@
 
     	<div class="search-form">
 
-        	<form method="post" action="https://expert-themes.com/html/eventrox/index.html">
+        	<form method="post" action="https://scrumdaybangalore.org/">
 
             	<div class="form-group">
 
