--- a/buy-ticket.html
+++ b/buy-ticket.html
@@ -77,7 +77,7 @@
 
                             <ul class="navigation clearfix">
 							
-							    <li class="current dropdown"><a href="index.html">Home</a></li>
+							    <li class="dropdown"><a href="index.html">Home</a></li>
 
                                 <li class="dropdown"><a href="about-us.html">About</a></li>
 
@@ -374,7 +374,7 @@
 
                         <div class="newsletter-form">
 
-                            <form method="post" action="https://expert-themes.com/html/eventrox/blog.html">
+                            <form method="post" action="https://scrumdaybangalore.org/">
 
                                 <div class="form-group">
 
@@ -680,7 +680,7 @@
 
     	<div class="search-form">
 
-        	<form method="post" action="https://expert-themes.com/html/eventrox/index.html">
+        	<form method="post" action="https://scrumdaybangalore.org/">
 
             	<div class="form-group">
 
