--- a/schedule.html
+++ b/schedule.html
@@ -78,13 +78,13 @@
 
                             <ul class="navigation clearfix">
 							
-							    <li class="current dropdown"><a href="index.html">Home</a></li>
+							    <li class="dropdown"><a href="index.html">Home</a></li>
 
                                 <li class="dropdown"><a href="about-us.html">About</a></li>
 
                                 <li class="dropdown"><a href="speakers.html">Speakers</a></li>
 
-                                <li class="dropdown"><a href="schedule.html">Schedule</a></li>
+                                <li class="current dropdown"><a href="schedule.html">Schedule</a></li>
 
                                 <li class="dropdown"><a href="#">Other Events</a>
 
