--- a/speakers.html
+++ b/speakers.html
@@ -78,11 +78,11 @@
 
                             <ul class="navigation clearfix">
 							
-							    <li class="current dropdown"><a href="index.html">Home</a></li>
+							    <li class="dropdown"><a href="index.html">Home</a></li>
 
                                 <li class="dropdown"><a href="about-us.html">About</a></li>
 
-                                <li class="dropdown"><a href="speakers.html">Speakers</a></li>
+                                <li class="current dropdown"><a href="speakers.html">Speakers</a></li>
 
                                 <li class="dropdown"><a href="schedule.html">Schedule</a></li>
 
@@ -391,7 +391,7 @@
 
                         <div class="newsletter-form">
 
-                            <form method="post" action="https://expert-themes.com/html/eventrox/blog.html">
+                            <form method="post" action="https://scrumdaybangalore.org/">
 
                                 <div class="form-group">
 
@@ -697,7 +697,7 @@
 
     	<div class="search-form">
 
-        	<form method="post" action="https://expert-themes.com/html/eventrox/index.html">
+        	<form method="post" action="https://scrumdaybangalore.org/">
 
             	<div class="form-group">
 
