--- a/about-us.html
+++ b/about-us.html
@@ -104,9 +104,9 @@
 
                             <ul class="navigation clearfix">
 							
-							    <li class="current dropdown"><a href="index.html">Home</a></li>
+							    <li class="dropdown"><a href="index.html">Home</a></li>
 
-                                <li class="dropdown"><a href="about-us.html">About</a></li>
+                                <li class="current dropdown"><a href="about-us.html">About</a></li>
 
                                 <li class="dropdown"><a href="speakers.html">Speakers</a></li>
 
@@ -573,7 +573,7 @@
 
                         <div class="newsletter-form">
 
-                            <form method="post" action="https://expert-themes.com/html/eventrox/blog.html">
+                            <form method="post" action="https://scrumdaybangalore.org/">
 
                                 <div class="form-group">
 
@@ -879,7 +879,7 @@
 
     	<div class="search-form">
 
-        	<form method="post" action="https://expert-themes.com/html/eventrox/index.html">
+        	<form method="post" action="https://scrumdaybangalore.org/">
 
             	<div class="form-group">
 
