--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
 
                             <ul class="navigation clearfix">
 							
-							    <li class="current dropdown"><a href="index.html">Home</a></li>
+							    <li class="dropdown"><a href="index.html">Home</a></li>
 
                                 <li class="dropdown"><a href="about-us.html">About</a></li>
 
@@ -99,7 +99,7 @@
 
                                 </li>
 
-                                <li><a href="contact.html">Contact</a></li>
+                                <li Class="current dropdown"><a href="contact.html">Contact</a></li>
 
                             </ul>
 
@@ -233,7 +233,7 @@
                             <div class="sec-title">
                                 <h2>Get in Touch</h2>
                             </div>
-                            <form method="post" action="https://expert-themes.com/html/eventrox/sendemail.php" id="contact-form">
+                            <form method="post" action="https://scrumdaybangalore.org/" id="contact-form">
                                 <div class="row clearfix">
                                     <div class="col-lg-6 col-md-6 col-sm-12 form-group">
                                         <input type="text" name="username" placeholder="Name" required="">
@@ -298,7 +298,7 @@
 
                         <div class="newsletter-form">
 
-                            <form method="post" action="https://expert-themes.com/html/eventrox/blog.html">
+                            <form method="post" action="https://scrumdaybangalore.org/">
 
                                 <div class="form-group">
 
@@ -604,7 +604,7 @@
 
     	<div class="search-form">
 
-        	<form method="post" action="https://expert-themes.com/html/eventrox/index.html">
+        	<form method="post" action="https://scrumdaybangalore.org/">
 
             	<div class="form-group">
 
