--- a/testing.html
+++ b/testing.html
@@ -191,7 +191,7 @@
             <div class="content-box">
                 <div class="address"><span class="icon fa fa-map-marker-alt"></span>June 19, 2021 | LIVE VIRTUAL</div>
                 <h2> Scrum Day<br>Bangalore 2021</h2>
-				<h5><strong><Mark>Metrics and Measurements – Mirrors of Enterprise Mental Models</Mark></strong></h5><Br><Br><Br>
+				<h5><strong><Mark>THEME: Metrics and Measurements – Mirrors of Enterprise Mental Models</Mark></strong></h5><Br><Br><Br>
             </div>
             <!-- Countdown -->
             <div class="countdown clearfix">
@@ -1441,7 +1441,7 @@
 							
 							<div class="price-box">
 
-                                <h4 class="price">$9.99</h4>
+                                <h4 class="price">$ 9.99</h4>
 
                             </div>
 
